# cpp-starter

./: .clang-tidy  LICENSE  README.md
docker/: Dockerfile  build_image  create_container
scripts/: core_dumps
skills/google-cpp-style/: SKILL.md
skills/google-cpp-style/demos/: .clangd  02_scoping.cc  03_classes.cc  04_functions.cc  05_ownership.cc  06_modern_cpp.cc  07_naming.cc  08_comments_formatting.cc  CMakeLists.txt
skills/google-cpp-style/demos/01_header_files/: CMakeLists.txt  header_files_demo.cc  project_bar.h  project_foo.h
